---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/include/test_include_quoted_falls_back_to_bracketed.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_include_quoted_falls_back_to_bracketed.c"
   (typedef ptrdiff_t `long`)
   (typedef size_t `unsigned long`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `nullptr_t`)
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition xs~2 `array<int; 2>`
            (braced
               (subobject +0 (1 `int`))
               (subobject +4 (2 `int`))))
         (return
            (logical-or `int`
               (0 `int`)
               (1 `int`))))))

----- stderr -----
